Feat: Responsive | Add mobile style (#5)
Co-authored-by: lynj <82319291+earlyoonj@users.noreply.github.com>

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   </header>
   <main>
     <!-- ABOUT -->
-    <section id="about">
+    <section id="about" class="about">
       <div class="about__main page-width flex">
         <h3 class="about__main__title">About</h3>
         <div class="about__main__profile">
@@ -100,8 +100,8 @@
       <h3>Work Experience</h3>
       <ul>
         <li class="work__section">
-          <div class="work__section__head">
-            <div>
+          <div class="work__section__head flex">
+            <div class="work__section__head__info">
               <h5>BH Food Group</h5>
               <p class="text-xl">Full Stack Web Developer</p>
             </div>
@@ -146,7 +146,7 @@
               </ul>
             </div>
               <div class="relative">
-                <div class="work__section__overlay">
+                <div class="work__section__overlay flex">
                   <div class="screen-wrapper screen-wrapper--desktop">
                     <img src="images/gandago-seller.png" />
                   </div>
@@ -156,8 +156,8 @@
           </div>
         </li>
         <li class="work__section">
-          <div class="work__section__head">
-            <div>
+          <div class="work__section__head flex">
+            <div class="work__section__head__info">
               <h5>CookieDog</h5>
               <p class="text-xl">Frontend Engineer</p>
             </div>
@@ -167,15 +167,15 @@
             </div>
           </div>
           <div class="work__section__body">
-            <ul class="work__body__list">
+            <ul class="work__section__body__list">
               <li>Implemented new features for the artist dashboard page in the Artist-Fan Connection Platform project
                 using <span class="chip chip--xs">React</span></li>
             </ul>
           </div>
         </li>
         <li class="work__section">
-          <div class="work__section__head">
-            <div>
+          <div class="work__section__head flex">
+            <div class="work__section__head__info">
               <h5>National Cancer Center <br />Graduate School of<br /> Cancer Science and Policy</h5>
               <p class="text-xl">Researcher of Industry-University Cooperation Foundation</p>
             </div>
@@ -197,8 +197,8 @@
           </div>
         </li>
         <li class="work__section">
-          <div class="work__section__head">
-            <div>
+          <div class="work__section__head flex">
+            <div class="work__section__head__info">
               <h5>Mobigen</h5>
               <p class="text-xl">UI Solution Research Team Intern</p>
             </div>
